<resources>
    <string name="app_name">Iglesia digital</string>
    <string name="home">Inicio</string>
    <string name="help">S.O.S</string>
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_ayuda">Fragment Ayuda</string>
    <string name="fragment_home">Fragment Home</string>
    <string name="fragment_perfil">Fragment Perfil</string>
    <string name="welcome_user">Bienvenido, Juan Carlos</string>
    <string name="biblioteca">Biblioteca Virtual</string>
    <string name="oraciones">Oraciones</string>
    <string name="mision">Misión, Visión y \n valores</string>
    <string name="red_social">Red social</string>
    <string name="servicios">Servicios</string>
    <string name="mi_iglesia">Mi iglesia</string>
    <string name="formacion">Biblioteca virtual</string>
    <string name="eventos">Eventos en vivo</string>
    <string name="apoyar_mi_iglesia">Mi ofrenda</string>
    <string name="misas">Horarios de misa</string>
    <string name="logo_encuentro">logo iglesia digital</string>
    <string name="icono_eventos">icono eventos</string>
    <string name="icono_formacion">icono formacion</string>
    <string name="icono_iglesia">icono iglesia</string>
    <string name="icono_servicios">icono servicios</string>
    <string name="icono_red_social">icono red social</string>
    <string name="icono_mision">icono mision</string>
    <string name="icono_oraciones">icono oraciones</string>
    <string name="icono_biblioteca">icono biblioteca</string>
    <string name="icono_back">icono back</string>
    <string name="icono_codigo_etica">icono codigo etica</string>
    <string name="c_digo_de_tica">Código de ética</string>
    <string name="biblioteca_virtual">Biblioteca virtual</string>
    <string name="icono_mi_iglesia">icono mi iglesia</string>
    <string name="eventos_en_vivo">Eventos en vivo</string>
    <string name="texto_splash">©2023 Iglesia Digital I %s \n Todos los derechos reservados</string>
    <string name="omitir">Omitir</string>
    <string name="img_material">img material</string>
    <string name="material">Material exclusivo en nuestra biblioteca virtual</string>
    <string name="findMaterials">Encuentra libros, audios, videos y demás material multimedia.</string>
    <string name="siguiente">Siguiente</string>
    <string name="liveEvents">No te pierdas ningún evento en vivo</string>
    <string name="enjoyEvents">Disfruta de todos los eventos sin importar donde estés, desde tu aplicación.</string>
    <string name="iniciar_sesi_n"><u>Iniciar sesión</u></string>
    <string name="registrarmee"><u>Registrarme</u></string>
    <string name="go_a_head">Continuar</string>
    <string name="name_toolbar">%s %s %s</string>
    <string name="good_afternon">Buenas tardes,</string>
    <string name="support_my_church">Mi ofrenda</string>
    <string name="banco_azteca">Banco Azteca</string>
    <string name="select_the_amount">Selecciona la cantidad del donativo</string>
    <string name="_0_0">$0.00</string>
    <string name="txt_continue_fragment_bank"><u>Continue</u></string>
    <string name="others_banks">Otros bancos</string>
    <string name="message">%s@%s@%s@%s@%s</string>
    <string name="eamx_other_banks_fragment_donations_with_card">Donativo con tarjeta</string>
    <string name="instructions_to_donate">Para realizar una ofrenda, ingresa los\n<br>siguientes datos</br></string>
    <string name="eamx_other_banks_fragment_card_owner">Titular de la trajeta</string>
    <string name="eamx_other_banks_fragment_card_number">Numero de tarjeta</string>
    <string name="eaxm_other_banks_fragment_expired_date">Fecha de vencimiento</string>
    <string name="eaxm_other_banks_fragment_cvv_card">CVV</string>
    <string name="spend_to_donate">Cantidad</string>
    <string name="eaxm_other_banks_fragment_button_confirm">Comfirmar</string>
    <string name="eaxm_other_banks_fragment_credir_or_debit">Credito/Debito</string>
    <string name="icon_banco_azteca">Icono banco azteca</string>
    <string name="icon_others">Icono otros bancos</string>
    <string name="without_icon">sin imagen</string>
    <string name="icon_show">Icon show</string>
    <string name="debit">Debit</string>
    <string name="slash">/</string>
    <string name="credit">Credit</string>
    <string name="hint_card_number">0000–0000–0000–0000</string>
    <string name="titular">Titular</string>
    <string name="mounth_year">MM/AA</string>
    <string name="cvv">CVV</string>
    <string name="hint_donate">$0.00</string>
    <string name="confirmar">Confirmar</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="cadena_de_oraci_n">Cadena de oración</string>
    <string name="icon_qr">icono qr</string>
    <string name="qr_code">QR code</string>
    <string name="good_morning">Buenos días,</string>
    <string name="good_afternoon">Buenas tardes,</string>
    <string name="good_nigth">Buenas noches,</string>
    <string name="onbording_inicio_1">A este espacio de Iglesia Digital de la Arquidiócesis de México, donde fieles, sacerdotes, religiosos, comunidades e instituciones de inspiración católica tenemos un lugar especial.</string>
    <string name="onbording_inicio_2">En la app encontrarás espacios de oración, formación, interacción e información relevante de iglesias y comunidades que te ayudarán a vivir tu fe.</string>
    <string name="onbording_inicio_3">Te invitamos a completar tu registro para conocerte mejor y darte acceso a las funciones que podrás utilizar según tu rol.</string>
    <string name="comunidades">Comunidades</string>
    <string name="noticias">Noticias</string>
    <string name="espiritualidad">Espiritualidad</string>

</resources>